# BitStore

./: .gitignore  CMakeLists.txt  README.md
include/: Server.h
src/: Server.cpp  main.cpp
